[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UnstompableFlyingChasingEnemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BaseEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/AttackHitCheck.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 80.0999

[node name="UnstompableFlyingChasingEnemy" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="AttackHitCheck" parent="." index="3" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitCheck" index="0"]
shape = SubResource( 1 )

[node name="DetectionZone" type="Area2D" parent="." index="4"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="5"]
scale = Vector2( 0.8, 0.8 )

[connection signal="hit" from="AttackHitCheck" to="." method="_on_AttackHitCheck_hit"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
